--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "npm run watch",
-    "watch": "babel src --out-dir dist",
+    "watch": "babel libs --out-dir dist",
     "test": "jest"
   },
   "repository": {
